// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Formats a code block 1`] = `
"\`\`\`js
foo(
  reallyLongArg(),
  omgSoManyParameters(),
  IShouldRefactorThis(),
  isThereSeriouslyAnotherOne()
);
\`\`\`
"
`;

exports[`Formats multiple code blocks 1`] = `
"\`\`\`js
foo(
  reallyLongArg(),
  omgSoManyParameters(),
  IShouldRefactorThis(),
  isThereSeriouslyAnotherOne()
);
\`\`\`

\`\`\`js
foo(
  reallyLongArg(),
  omgSoManyParameters(),
  IShouldRefactorThis(),
  isThereSeriouslyAnotherOne()
);
\`\`\`
"
`;
